src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>CRF_Form_Id__c</fullName>
        <description>This contains CRF&apos;s records id. Different-Different CRFs like AE_Detail__c record id.</description>
        <label>CRF Form Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRF__c</fullName>
        <description>This contains rejected CRF__c object id.</description>
        <label>CRF</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Id__c</fullName>
        <description>This is used for checking related tasks with a particular group id. Some tasks may be contains same group id.</description>
        <label>Group Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsCreateTask__c</fullName>
        <defaultValue>true</defaultValue>
        <description>this field is used for check whether task should be created after completion of this task.</description>
        <label>IsCreateTask</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkToCRF__c</fullName>
        <label>Link to CRF</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <label>Minutes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_Label__c</fullName>
        <label>Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>It will contain object API name</description>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Due_Date__c</fullName>
        <description>This is for original task&apos;s due date</description>
        <label>Original Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Rescheduling_Id__c</fullName>
        <label>Proposed Rescheduling Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reschedule_reason__c</fullName>
        <label>Reschedule_reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Schedule_Event_Date__c</fullName>
        <label>Schedule Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Trial_Id__c</fullName>
        <description>This trial id will be used in task creation for matching trial on patient detail page, Where we will show the &quot;Next Due Date&quot; of date after match trial id.</description>
        <label>Trial Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial__c</fullName>
        <label>Trial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <picklist>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>subject__c</fullName>
        <label>subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>